--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+
 name: Lab Actions
 
 on:
@@ -20,20 +21,14 @@ jobs:
           git config --global user.email "2pectre@users.noreply.github.com"
         shell: powershell
 
-      - name: Run deploy.sh for LabAspApi_0
-        working-directory: LabAspApi_0
+      - name: Find and Run deploy.sh for each LabAspApi folder
         run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
-        shell: powershell
-
-      - name: Run deploy.sh for LabAspApi_1
-        working-directory: LabAspApi_1
-        run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
-        shell: powershell
-
-      - name: Run deploy.sh for LabAspApi_2
-        working-directory: LabAspApi_2
-        run: |
-          & "C:\Program Files\Git\bin\bash.exe" ./deploy.sh
+          $rootDir = 'C:\\actions-runner\\_work\\LabAspApi\\LabAspApi'
+          $folders = Get-ChildItem -Path $rootDir -Directory | Where-Object { $_.Name -match '^LabAspApi_\\d+$' }
+          foreach ($folder in $folders) {
+            $deployScript = \"$($folder.FullName)\\deploy.sh\"
+            if (Test-Path $deployScript) {
+              & \"C:\\Program Files\\Git\\bin\\bash.exe\" $deployScript
+            }
+          }
         shell: powershell
